# CObject

./: .gitignore  LICENSE  meson.build
include/: object.h
src/: object.c
